--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -627,6 +627,112 @@
         </section>
         <!-- Pricing -->
 
+        <!-- Projects -->
+        <section class="projects my-6" id="projects">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center mb-3">
+                        <h5>
+                            <span class="bad bg-primary rounded-0 text-uppercase">
+                                Projects
+                            </span>
+                        </h5>
+                        <h2 class="fw-bold">Project's we are proud of</h2>
+                        <p>
+                            We take pride in our successful projects and the value they bring to our clients. With our
+                            expertise and dedication, we have delivered exceptional results. Here are some highlights.
+                        </p>
+                    </div>
+                    <!-- Projects Row 1 -->
+                    <div class="row">
+                        <div class="col-md-4 mb-4">
+                            <div class="card bg-secondary">
+                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                    <img src="images/project-1.jpg" alt="Orkla Foods Project" class="card-img-top" />
+                                    <div class="card-body">
+                                        <p>
+                                            <strong>Orkla Foods</strong> - An AI and mobile app for faster grocery store
+                                            checkout in-store.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card bg-secondary">
+                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                    <img src="images/project-2.jpg" alt="First Bank Project" class="card-img-top" />
+                                    <div class="card-body">
+                                        <p>
+                                            <strong>First Bank</strong> - Created the first crypto bank savings account
+                                            and mobile banking.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card bg-secondary">
+                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                    <img src="images/project-3.jpg" alt="All Sweets Project" class="card-img-top" />
+                                    <div class="card-body">
+                                        <p>
+                                            <strong>All Sweets</strong> - An app solely focused on buying the fresh
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Projects Row 1 -->
+                    <!-- Projects Row 1 -->
+                    <div class="row">
+                        <div class="col-md-4 mb-4">
+                            <div class="card bg-secondary">
+                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                    <img src="images/project-4.jpg" alt="Fast Courier Project" class="card-img-top" />
+                                    <div class="card-body">
+                                        <p>
+                                            <strong>Fast Courier</strong> - A SAAS startup to help entrepreneurial
+                                            dropshipping businesses.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card bg-secondary">
+                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                    <img src="images/project-5.jpg" alt="Lyra Market Project" class="card-img-top" />
+                                    <div class="card-body">
+                                        <p>
+                                            <strong>Lyra Market</strong> - A physical and digital stationary service for
+                                            personal and professional use.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card bg-secondary">
+                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                    <img src="images/project-6.jpg" alt="Monday Stores Project" class="card-img-top" />
+                                    <div class="card-body">
+                                        <p>
+                                            <strong>Monday Stores</strong> - An mobile app that keeps store opening
+                                            hours up to date with one-click.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Projects Row 1 -->
+                </div>
+            </div>
+        </section>
+        <!-- Projects -->
+
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
