--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -660,7 +660,7 @@
                         </div>
                         <div class="col-md-4 mb-4">
                             <div class="card bg-secondary">
-                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                <a data-bs-toggle="modal2" data-bs-target="#modal1">
                                     <img src="images/project-2.jpg" alt="First Bank Project" class="card-img-top" />
                                     <div class="card-body">
                                         <p>
@@ -673,7 +673,7 @@
                         </div>
                         <div class="col-md-4 mb-4">
                             <div class="card bg-secondary">
-                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                <a data-bs-toggle="modal" data-bs-target="#modal3">
                                     <img src="images/project-3.jpg" alt="All Sweets Project" class="card-img-top" />
                                     <div class="card-body">
                                         <p>
@@ -689,7 +689,7 @@
                     <div class="row">
                         <div class="col-md-4 mb-4">
                             <div class="card bg-secondary">
-                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                <a data-bs-toggle="modal" data-bs-target="#modal4">
                                     <img src="images/project-4.jpg" alt="Fast Courier Project" class="card-img-top" />
                                     <div class="card-body">
                                         <p>
@@ -702,7 +702,7 @@
                         </div>
                         <div class="col-md-4 mb-4">
                             <div class="card bg-secondary">
-                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                <a data-bs-toggle="modal" data-bs-target="#modal5">
                                     <img src="images/project-5.jpg" alt="Lyra Market Project" class="card-img-top" />
                                     <div class="card-body">
                                         <p>
@@ -715,7 +715,7 @@
                         </div>
                         <div class="col-md-4 mb-4">
                             <div class="card bg-secondary">
-                                <a data-bs-toggle="modal" data-bs-target="#modal1">
+                                <a data-bs-toggle="modal" data-bs-target="#modal6">
                                     <img src="images/project-6.jpg" alt="Monday Stores Project" class="card-img-top" />
                                     <div class="card-body">
                                         <p>
@@ -733,6 +733,154 @@
         </section>
         <!-- Projects -->
 
+        <!-- Project Modals -->
+        <div class="project-modals">
+            <!-- Modal 1 -->
+            <div class="modal fade" id="modal1">
+                <div class="modal-dialog modal-lg mt-7">
+                    <div class="modal-content bg-secondary p-5">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="images/project-1.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Oakla Foods</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <a href="#" class="btn btn-primary text-white">
+                                    Details
+                                </a>
+                                <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal 1 -->
+            <!-- Modal 2 -->
+            <div class="modal fade" id="modal2">
+                <div class="modal-dialog modal-lg mt-7">
+                    <div class="modal-content bg-secondary p-5">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="images/project-2.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-md-6">
+                                <h3>First Bank</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <a href="#" class="btn btn-primary text-white">
+                                    Details
+                                </a>
+                                <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal 2 -->
+            <!-- Modal 3 -->
+            <div class="modal fade" id="modal3">
+                <div class="modal-dialog modal-lg mt-7">
+                    <div class="modal-content bg-secondary p-5">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="images/project-3.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-md-6">
+                                <h3>All Sweets</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <a href="#" class="btn btn-primary text-white">
+                                    Details
+                                </a>
+                                <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal 3 -->
+            <!-- Modal 4 -->
+            <div class="modal fade" id="modal4">
+                <div class="modal-dialog modal-lg mt-7">
+                    <div class="modal-content bg-secondary p-5">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="images/project-4.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Fast Courier</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <a href="#" class="btn btn-primary text-white">
+                                    Details
+                                </a>
+                                <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal 4 -->
+            <!-- Modal 5 -->
+            <div class="modal fade" id="modal5">
+                <div class="modal-dialog modal-lg mt-7">
+                    <div class="modal-content bg-secondary p-5">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="images/project-5.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Lyra Market</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <a href="#" class="btn btn-primary text-white">
+                                    Details
+                                </a>
+                                <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal 5 -->
+            <!-- Modal 6 -->
+            <div class="modal fade" id="modal6">
+                <div class="modal-dialog modal-lg mt-7">
+                    <div class="modal-content bg-secondary p-5">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="images/project-6.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Monday Stores</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit id rerum
+                                    exercitationem. Quisquam unde molestiae quasi quos. Sint, cum ex.</p>
+                                <a href="#" class="btn btn-primary text-white">
+                                    Details
+                                </a>
+                                <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal 6 -->
+        </div>
+        <!-- Project Modals -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
