--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -741,7 +741,7 @@
                     <div class="modal-content bg-secondary p-5">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/project-1.jpg" alt="" class="img-fluid">
+                                <img src="images/project-1.jpg" alt="Oakla Foods" class="img-fluid" />
                             </div>
                             <div class="col-md-6">
                                 <h3>Oakla Foods</h3>
@@ -765,7 +765,7 @@
                     <div class="modal-content bg-secondary p-5">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/project-2.jpg" alt="" class="img-fluid">
+                                <img src="images/project-2.jpg" alt="First Bank" class="img-fluid" />
                             </div>
                             <div class="col-md-6">
                                 <h3>First Bank</h3>
@@ -789,7 +789,7 @@
                     <div class="modal-content bg-secondary p-5">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/project-3.jpg" alt="" class="img-fluid">
+                                <img src="images/project-3.jpg" alt="All Sweets" class="img-fluid" />
                             </div>
                             <div class="col-md-6">
                                 <h3>All Sweets</h3>
@@ -813,7 +813,7 @@
                     <div class="modal-content bg-secondary p-5">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/project-4.jpg" alt="" class="img-fluid">
+                                <img src="images/project-4.jpg" alt="Fast Courier" class="img-fluid" />
                             </div>
                             <div class="col-md-6">
                                 <h3>Fast Courier</h3>
@@ -837,7 +837,7 @@
                     <div class="modal-content bg-secondary p-5">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/project-5.jpg" alt="" class="img-fluid">
+                                <img src="images/project-5.jpg" alt="Lyra Market" class="img-fluid" />
                             </div>
                             <div class="col-md-6">
                                 <h3>Lyra Market</h3>
@@ -861,7 +861,7 @@
                     <div class="modal-content bg-secondary p-5">
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="images/project-6.jpg" alt="" class="img-fluid">
+                                <img src="images/project-6.jpg" alt="Monday Stores" class="img-fluid" />
                             </div>
                             <div class="col-md-6">
                                 <h3>Monday Stores</h3>
@@ -881,6 +881,30 @@
             <!-- Modal 6 -->
         </div>
         <!-- Project Modals -->
+
+        <!-- Newsletter -->
+        <section class="newsletter my-6" id="newsletter">
+            <div class="container">
+                <div class="row mb-4">
+                    <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
+                        <h2 class="fw-bold">Subscribe And Follow</h2>
+                        <p>
+                            Stay updated with our latest news and announcements. Subscribe to our newsletter and follow
+                            us on social media for valuable insights and exciting updates.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
+                        <div class="input-group mb-3">
+                            <input type="email" class="form-control" placeholder="Enter Your Email" />
+                            <button class="btn btn-primary text-white rounded-0" type="button">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Newsletter -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
