--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -906,6 +906,60 @@
         </section>
         <!-- Newsletter -->
 
+        <!-- Footer -->
+        <footer class="footer bg-secondary py-6">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-4 my-3">
+                        <h6>About Vera</h6>
+                        <p>Vera is a dedicated software solutions company that aims to provide exceptional services to
+                            its clients. We are committed to delivering innovative and customized solutions that meet
+                            your specific business needs.</p>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Middle Column -->
+                    <div class="col-md-4 my-3">
+                        <h6>Links</h6>
+                        <ul class="list-unstyled">
+                            <li>
+                                Important: <a href="#">Terms & Conditions</a>, <a href="privacy.html">Privacy
+                                    Policty</a>
+                            </li>
+                            <li>
+                                Useful: <a href="/#expertise">Expertise</a>, <a href="/#pricing">Pricing</a>, <a
+                                    href="/#newsletter">Newsletter</a>
+                            </li>
+                            <li>
+                                Menu: <a href="/#home">Home</a>, <a href="/#details">Details</a>, <a
+                                    href="/#solutions">Solutions</a>, <a href="/#projects">Projects</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Middle Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-4 my-3">
+                        <div class="mb-4">
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-facebook fa-3x mx-2 text-white"></i>
+                            </a>
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-x-twitter fa-3x mx-2 text-white"></i>
+                            </a>
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-instagram fa-3x mx-2 text-white"></i>
+                            </a>
+                            <a href="#" class="text-decoration-none">
+                                <i class="fa-brands fa-pinterest fa-3x mx-2 text-white"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </footer>
+        <!-- Footer -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/replaceme.min.js"></script>
         <script src="js/script.js"></script>
