--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -953,6 +953,10 @@
                                 <i class="fa-brands fa-pinterest fa-3x mx-2 text-white"></i>
                             </a>
                         </div>
+                        <p>
+                            We would love to hear from you <a
+                                href="mailto:info@vera.com"><strong>info@vera.com</strong></a>
+                        </p>
                     </div>
                     <!-- Right Column -->
                 </div>
