--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -927,12 +927,14 @@
                                     Policty</a>
                             </li>
                             <li>
-                                Useful: <a href="/#expertise">Expertise</a>, <a href="/#pricing">Pricing</a>, <a
-                                    href="/#newsletter">Newsletter</a>
+                                Useful: <a href="index.html/#expertise">Expertise</a>, <a
+                                    href="index.html/#pricing">Pricing</a>, <a
+                                    href="index.html/#newsletter">Newsletter</a>
                             </li>
                             <li>
-                                Menu: <a href="/#home">Home</a>, <a href="/#details">Details</a>, <a
-                                    href="/#solutions">Solutions</a>, <a href="/#projects">Projects</a>
+                                Menu: <a href="index.html">Home</a>, <a href="index.html/#details">Details</a>, <a
+                                    href="index.html/#solutions">Solutions</a>, <a
+                                    href="index.html/#projects">Projects</a>
                             </li>
                         </ul>
                     </div>
